[tool.poetry]
name = "car-park-counter"
version = "0.1.0"
description = ""
authors = ["DimaK <korbanitskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
cvzone = "1.5.3"
numpy = "1.21.5"
opencv-python = "4.5.4.60"
ruff = "^0.5.1"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[tool.black]
line-length = 120
target-version = ["py311"]


[tool.flake8]
extend-exclude = [
    ".venv",
    "build",
    ".eggs",
    ".git",
]
max-complexity = 12
max-line-length = 120

extend-ignore = [
  "E203",  # whitespace before ':' (conflicts with Black)
  "E231",  # Bad trailing comma (conflicts with Black)
  "E501",  # line too long (conflicts with Black)
  "W503",  # line break before binary operator (conflicts with Black)
  "E701",  # multiple statements on one line (conflicts with Black)
]

[tool.isort]
profile = "black"
color_output = false
skip_gitignore = true
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
