[tool.poetry]
name = "car-park-counter"
version = "0.1.0"
description = ""
authors = ["DimaK <korbanitskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
cvzone = "1.5.3"
numpy = "1.21.5"
opencv-python = "4.5.4.60"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
